force-app/main/default/objects/AI_RAG_Sync__c/AI_RAG_Sync__c.object-meta.xml
<CustomObject>
    <label>RAG Sync</label>
    <nameField>
        <label>RAG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RAG Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>