force-app/main/default/objects/AI_RAG_Sync__c/fields/AI_Model_Datastore_Import__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Datastore_Import__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Model (Datastore Import)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AI_Connection__c.Type__c</field>
            <operation>equals</operation>
            <value>RAG Sync</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AI_Connection__c</referenceTo>
    <relationshipLabel>RAG Syncs (AI Model (Datastore Import))</relationshipLabel>
    <relationshipName>AI_RAG_Sync_Schedulers_Datastore</relationshipName>
    <type>Lookup</type>
</CustomField>