force-app/main/default/objects/AI_RAG_Sync__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>