force-app/main/default/objects/AI_RAG_Sync__c/fields/Max_File_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Size__c</fullName>
    <label>Max File Size (in MB)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>