force-app/main/default/objects/AI_RAG_Sync__c/fields/Scheduled_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Timezone__c</fullName>
    <label>Scheduled Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>